# d3po

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
config/: base.py  base_script.py
d3po_pytorch/: prompts.py
d3po_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
d3po_pytorch/assets/: kvasir.txt
d3po_pytorch/diffusers_patch/: pipeline_with_logprob.py  pipeline_with_logprob_inpaint.py  pipeline_with_logprob_inpaint_new.py
data/2024-02-26-09-50-31_sample_bdbao_140/: prompt.json
data/2024-02-26-09-50-31_sample_bdbao_140/json/: data.json  few.json
logs/2024.02.26_16.41.32_train_bdbao/: logs.txt
logs/2024.02.26_16.41.32_train_bdbao/checkpoints/checkpoint_0/: scaler.pt
logs/2024.02.26_16.41.32_train_bdbao/checkpoints/checkpoint_1/: scaler.pt
logs/2024.02.26_16.41.32_train_bdbao/checkpoints/checkpoint_2/: scaler.pt
logs/2024.02.26_16.41.32_train_bdbao/checkpoints/checkpoint_3/: scaler.pt
logs/2024.02.26_16.41.32_train_bdbao/checkpoints/checkpoint_4/: scaler.pt
playground/: pure_inpaint.py
scripts/: finetune_sample.py  finetune_train.py  inference.py  sample.py  sample_inpaint.py  train.py  train_inpaint.py  vastai.sh
slurm/: cmd.txt  install.sh  sample.sh  train.sh
train_data/kvasir/pedunculated-polyps/: kavsir_bboxes.json
ui/: human_feedbacks.py
